--- a/package.json
+++ b/package.json
@@ -15,9 +15,24 @@
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/localize": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@progress/kendo-angular-buttons": "13.2.0",
+    "@progress/kendo-angular-common": "13.2.0",
+    "@progress/kendo-angular-dialog": "13.2.0",
+    "@progress/kendo-angular-icons": "13.2.0",
+    "@progress/kendo-angular-inputs": "13.2.0",
+    "@progress/kendo-angular-intl": "13.2.0",
+    "@progress/kendo-angular-l10n": "13.2.0",
+    "@progress/kendo-angular-label": "^13.2.0",
+    "@progress/kendo-angular-popup": "13.2.0",
+    "@progress/kendo-angular-upload": "13.2.0",
+    "@progress/kendo-drawing": "^1.17.2",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-svg-icons": "^1.0.0",
+    "@progress/kendo-theme-default": "^6.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
